--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,12 @@ body {
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    display: flex;
+    justify-content: space-around;
+}
+
+.column {
+    width: 45%;
 }
 
 #block {
@@ -24,14 +30,15 @@ body {
 button {
     padding: 10px 20px;
     font-size: 18px;
-    margin-top: 20px;
+    margin-top: 10px;
     cursor: pointer;
     border: none;
     border-radius: 5px;
     background-color: #007BFF;
     color: white;
     display: block;
-    margin: 10px auto;
+    margin: 0 auto 10px auto;
+    width: 80%;
 }
 
 button:hover {
