--- a/styles.css
+++ b/styles.css
@@ -44,13 +44,13 @@ button:disabled {
 }
 
 h1 {
-    color: white;
+    color: gray;
 }
 
 p {
-    color: white;
+    color: gray;
 }
 
 h2 {
-    color: white;
+    color: gray;
 }
