--- a/styles.css
+++ b/styles.css
@@ -43,3 +43,40 @@ button:disabled {
     cursor: not-allowed;
 }
 
+.modal {
+            display: none; /* Masquer la fenêtre par défaut */
+            position: fixed; /* Rester à la même position même en défilant */
+            z-index: 1; /* Au-dessus des autres éléments */
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto; /* Activer le défilement si nécessaire */
+            background-color: rgb(0,0,0); /* Couleur de fond avec transparence */
+            background-color: rgba(0,0,0,0.4); /* Couleur de fond avec transparence */
+}
+
+        /* Contenu de la fenêtre modale */
+        .modal-content {
+            background-color: #fefefe;
+            margin: 15% auto; /* 15% à partir du haut et centré horizontalement */
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%; /* Largeur de la fenêtre modale */
+            max-width: 500px; /* Largeur maximale de la fenêtre modale */
+}
+
+        /* Style pour le bouton de fermeture */
+        .close {
+            color: #aaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+}
+
+        .close:hover,
+        .close:focus {
+            color: black;
+            text-decoration: none;
+            cursor: pointer;
+}
